--- a/mainIndex/home/home.css
+++ b/mainIndex/home/home.css
@@ -5,7 +5,7 @@
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
     margin-top: 5%;
     margin-left: 20%;
     margin-right: 20%;
