--- a/mainIndex/LoginInfo/css/signin.css
+++ b/mainIndex/LoginInfo/css/signin.css
@@ -1,7 +1,8 @@
 body{
-    margin: 0;
-    padding: 0;
-    background:
+    margin: 0px;
+    padding: 0px;
+    font-family: 'QuickSand', sans-serif;
+    
     background-size: cover;
     background-position: center;
     font-family: sans-serif;
@@ -11,8 +12,8 @@ body{
 .loginbox{
     width: 320px;
     height: 420px;
-    background: #000
-    color: #fff
+    background: #000;
+    color: #fff;
     top: 50%;
     left: 50%;
     position: absolute;
