--- a/mainIndex/LoginInfo/css/signin.css
+++ b/mainIndex/LoginInfo/css/signin.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     margin: 0px;
     padding: 0px;
     font-family: 'QuickSand', sans-serif;
@@ -20,4 +20,115 @@ body{
     transform: translate(-50)
     
 
+} */
+
+#LogHere{
+    background-color: #4d59ff;
+    text-align:center;
+    color:white;
+}
+
+#loginbox{
+    background-color: white;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    flex-direction: column;
+    align-items: center;
+    width:30%;
+    height:350px;
+    margin:10px auto;
+}
+
+#gameheader{
+    width:100%;
+    height:10px;
+    background:black;
+}
+
+#email{
+    width:70%;
+    height:40px;
+    display: block;
+    margin: 0 auto;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid black;
+}
+
+#password{
+    width:70%;
+    height:40px;
+    display: block;
+    margin: 0 auto;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid black;
+}
+
+#signIn{
+    background-color: #4d59ff;
+    color: white;
+    border: none;
+    font-weight: bold;
+    padding: 15px 32px;
+    border-radius: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 13px;
+    margin-top: 20px;
+    margin-left:54px;
+    margin-right: 54px;
+}
+
+#signOut{
+    background-color: #4d59ff;
+    color: white;
+    font-weight: bold;
+    border:none;
+    padding:15px 32px;
+    border-radius: 10px;
+    text-align: center;
+    text-decoration:none;
+    display: inline-block;
+    font-size: 13px;
+    margin-top: 20px;
+    margin-left:54px;
+    margin-right: 54px;
+}
+
+#forgotPass{
+    background-color: #4dfff0;
+    color: black;
+    font-weight: bold;
+    border:none;
+    padding:5px 22px;
+    border-radius: 10px;
+    text-align: center;
+    text-decoration:none;
+    display: inline-block;
+    font-size: 12px;
+    margin-top: 20px;
+    margin-left:54px auto;
+    /* margin-right: 54px auto; */
+}
+
+
+#createAccount{
+    background-color: #4dfff0;
+    color: black;
+    font-weight: bold;
+    border:none;
+    padding:5px 22px;
+    border-radius: 10px;
+    text-align: center;
+    text-decoration:none;
+    display: inline-block;
+    font-size: 12px;
+    margin-top: 10px;
+    margin-left:54px auto;
+    margin-right: 54px auto;
+}
+
+button:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
