--- a/mainIndex/LoginInfo/css/signin.css
+++ b/mainIndex/LoginInfo/css/signin.css
@@ -18,8 +18,18 @@
     left: 50%;
     position: absolute;
     transform: translate(-50)
-    
-
+    width: 100%;
+}  
+min-height: 100g
+background:
+display: flex;
+Justify-contant: center;
+align-items: center;
+}
+.container{
+width: 350px;
+height: 50px;
+background: linear-gradient(rgb(prout Linear-gradient(
 } */
 
 #LogHere{
@@ -132,3 +142,5 @@
 button:hover{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
+
